--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ color: white;
 .main-head {
   color: white;
   width: 100%;
-  background-image: linear-gradient(rgba(0,0,0,0.9), transparent),url("/images/bg-hero.jpg");
+  background-image: linear-gradient(rgba(0,0,0,0.9), transparent),url("images/bg-hero.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
