--- a/styles.css
+++ b/styles.css
@@ -42,14 +42,6 @@ color: white;
   padding-bottom: 200px;
 }
 
-@media (min-width: 300px) and (max-width: 649px) {
-  main {
-    display: flex;
-    align-items: center;
-  }
-}
-
-
 nav {
   display: flex;
   flex: 1 1 40rem;
@@ -58,14 +50,7 @@ nav {
   justify-content: space-between;
   align-items: center;
 }
-@media screen and (min-width: 375px) and (max-width: 439px){
-  nav {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-column-gap: 10px;
-    grid-row-gap: 1em;
-  }
-}
+
 .logo {
   display: flex;
   flex: 1 1;
@@ -184,6 +169,7 @@ hr {
   font-weight: bold;
   border: none;
   background: #222;
+  width: 100%;
 }
 
 /* Section 1 */
@@ -457,6 +443,7 @@ svg {
 .form-action.error small {
   visibility: visible;
 }
+
 /* Section 7 */
 
 .footer {
@@ -467,6 +454,7 @@ svg {
 .footer a {
   color: #888;
   letter-spacing: 0.03em;
+  text-decoration: none;
 }
 
 .footer p {
@@ -500,6 +488,7 @@ svg {
   font-size: 14px;
   color: grey;
 }
+
 
 /* Media */
 
@@ -539,9 +528,34 @@ svg {
   }
 
 
+
+
 }
 
 
 
+@media screen and (min-width: 375px) and (max-width: 700px){
+  .footer {
+    max-width: 50%;
+    margin: 0 auto;
+  }
+
+}
 
 
+@media screen and (min-width: 375px) and (max-width: 700px){
+  .final {
+    width: 50%;
+    margin: 0 auto;
+  }
+  #form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 20px;
+  }
+
+}
